Switched from pytaglib to Mutagen, added better multithreading and more explicit console messages. Mutagen is more portable (doesn't require installing taglib first), and supports more file formats. Lyric fetching success/failure displays upon completion of request rather than as a large batch at the end. Console messages now log which song lyric fetching failed for and from where.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-beautifulsoup4==4.6.0
-pytaglib==1.4.1
+Unidecode==1.0.22
 requests==2.18.4
-urllib3==1.22
+mutagen==1.40.0
+BeautifulSoup==3.2.1
+beautifulsoup4==4.6.0
