Add to .gitignore
Now also excludes folders of icons and more test assets, as well as any txt files.

--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,10 @@ venv.bak/
 
 # For testing purposes
 /src/test_songs
+/src/test_assets
+/src/icons
 /screenshots
+*.txt
 
 # Pesky Mac things
 .DS_Store
