Added ability to write lyrics to file metadata
- Separated out metadata reading/writing into module
- Added ability to write lyrics to tag, which is then saved to filepath
- Renamed --tag option to --metadata for clearer naming
- Added option to not save to text file
- Added alert when adding the same file multiple times
- Move detail popup from popping up in the center of the screen to off to the side

--- a/src/modules/settings.ini
+++ b/src/modules/settings.ini
@@ -3,7 +3,8 @@ source = Genius
 approximate = False
 info = True
 remove_brackets = True
-tag = True
+metadata = True
+text = True
 
 [ABOUT]
 version = 1
