Added keyboard shortcuts for common actions
In main window:
- ⌘ + Shift + F fullscreens the window
- ⌘ + M minimizes the window
- ⌘ + Shift + M zooms the window
- ⌘ + O adds a new file
- ⌘ + Shift + O adds a new folder
- ⌘ + W closes the window
- ⌘ + Backspace removes all files
- ⌘ + Shift + Backspace removes files with lyrics
- ⌘ + Comma opens the settings dialog

In the lyrics dialog:
- ⌘ + Shift + F fullscreens the dialog
- ⌘ + K opens the URL in a web browser
- ⌘ + R forces a refresh of the lyrics
- ⌘ + S saves lyrics
- ⌘ + Backspace removes lyrics

Also added a menubar with the same functions.

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
+bin/
 .env
 .venv
 env/
@@ -90,6 +91,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+pip-selfcheck.json
+pyvenv.cfg
+share/
 
 # Spyder project settings
 .spyderproject
@@ -109,7 +113,7 @@ venv.bak/
 /src/test_assets
 /src/icons
 /screenshots
-*.txt
+/test_songs/*.txt
 
 # Pesky Mac things
 .DS_Store
