--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+!*quaver-onedir.spec
+!*quaver-onefile.spec
 
 # Installer logs
 pip-log.txt
