--- a/src/modules/settings.ini
+++ b/src/modules/settings.ini
@@ -1,10 +1,10 @@
 [SETTINGS]
 source = Genius
 approximate = False
-info = 1
-remove_brackets = 1
-metadata = 1
-text = 1
+info = True
+remove_brackets = True
+metadata = True
+text = True
 
 [ABOUT]
 version = 1
