--- a/src/Info.plist
+++ b/src/Info.plist
@@ -16,7 +16,7 @@
 <key>CFBundlePackageType</key>
 <string>APPL</string>
 <key>CFBundleShortVersionString</key>
-<string>0.5.0</string>
+<string>0.5.428-alpha</string>
 <key>CFBundleDocumentTypes</key>
 <array>
   <dict>
