Support Windows "Open With" menu
- Currently testing on Windows 10, with new UWP changes. Not able to confirm whether it works fully on Windows 7.
- Notes are in utils.py, and in this commit message for posterity:
- Term(s):
   - HKCU/HKLM: HKEY_CURRENT_USER/HKEY_LOCAL_MACHINE, respectively
     - The correct key should be used depending on if program is being
       installed for only user, or for all users; HKCU and HKLM for
       each case
   - HKCR: HKEY_CLASSES_ROOT
   - Registry values documented with format: TYPE (Name) Data

 1. For application to be registered (and visible to Windows'
    "How would you like to open this file?" dialog:
      _HKCU/HKLM
      └── _Software
          └── _Classes
              └──_Applications
                 └──_name_of_app.exe
                    ├── Capabilities
                    ├── _shell
                    |   └── _open
                    |       └──_command
                    └── SupportedTypes
      NECESSARY:
        - Capabilities must have the following values:
          - REG_SZ (ApplicationDescription) some_kind_of_description
          - REG_SZ (ApplicationName) some_name
        - command must have the following value:
          - REG_SZ (Default) "path_to_executable_with quotes" "%1"
      OPTIONAL:
        - SupportedTypes documents the filetypes for which the app
          will be visible to. This should be updated for each new
          filetype:
          - REG_SZ (.file_type) [empty data]
        - name_of_app.exe can have the following values:
          - REG_SZ (Path) path_to_executable
          - REG_SZ (Version) version_of_app

 2. For the application to be shown in the "Open With" submenu in the
    right-click submenu:
      _HKCR
      └── _Local Settings
          └── _Software
              └──_Microsoft
                 └──_Windows
                    └── _Shell
                        └── MuiCache

      - MuiCache must have the following values:
        - REG_SZ (name_of_app.exe.Applic

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ MANIFEST
 !*quaver-onedir.spec
 !*quaver-onefile.spec
 
+# Advanced Installer
+*/advancedinstaller/
+*/advancedinstaller-pro/
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -90,6 +94,7 @@ bin/
 .venv
 env/
 venv/
+*/Scripts/
 ENV/
 env.bak/
 venv.bak/
@@ -111,6 +116,7 @@ share/
 .mypy_cache/
 
 # For testing purposes
+/src/test-songs/
 /src/test_songs
 /src/test_assets
 /src/icons
