--- a/src/Info.plist
+++ b/src/Info.plist
@@ -45,5 +45,7 @@
 <string>0</string>
 <key>NSHighResolutionCapable</key>
 <string>True</string>
+<key>NSRequiresAquaSystemAppearance</key>
+<string>True</string>
 </dict>
 </plist>
