Modify control and desktop files for Ubuntu
- Minor changes for how Ubuntu .deb is packaged.
- Bump version number.

--- a/src/quaver.desktop
+++ b/src/quaver.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Version=0.5.1328
+Version=0.19.0317
 Type=Application
 Name=Quaver
 GenericName=Lyrics Finder
 Comment=Quickly find lyrics for your songs.
-Exec=/usr/local/bin/Quaver %F
+Exec=/usr/bin/Quaver %F
 Terminal=false
 MimeType=audio/x-mp3;audio/mp4;audio/x-m4a;video/x-m4v;audio/x-tta;audio/x-ape;audio/x-ms-wma;audio/x-pn-aiff;audio/x-flac;audio/ogg
 Icon=/usr/share/quaver/quaver.svg
